--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -154,7 +154,7 @@
   width: calc(var(--space-base) * 2.25);
 }
 
-.onlyIcon.base {
+.onlyIcon.large {
   width: calc(var(--space-large) * 2.25);
 }
 
@@ -218,4 +218,4 @@
   100% {
     background-position: var(--space-larger) var(--space-larger);
   }
-}
+}
