fix(components): update button padding on has icon and label button (#388)
* delete padding property on hasIconAndLabel

* add static width for base size on onlyIcon

* add static width for base size on onlyIcon

* use suggestion

--- a/packages/components/src/Button/Button.css
+++ b/packages/components/src/Button/Button.css
@@ -146,9 +146,20 @@
   padding: 0;
 }
 
+.onlyIcon.small {
+  width: calc(var(--space-small) * 3);
+}
+
+.onlyIcon.base {
+  width: calc(var(--space-base) * 2.25);
+}
+
+.onlyIcon.large {
+  width: calc(var(--space-large) * 2);
+}
+
 .hasIconAndLabel {
   width: auto;
-  padding: 0 var(--space-base);
 }
 
 .hasIconAndLabel > *:first-child {
