Make checkbox and radio descriptions the same

--- a/packages/components/src/Checkbox/Checkbox.css
+++ b/packages/components/src/Checkbox/Checkbox.css
@@ -76,6 +76,6 @@
 }
 
 .description {
-  margin-top: var(--space-smaller);
-  margin-left: var(--space-large);
+  margin-bottom: var(--space-small);
+  padding-left: var(--space-large);
 }
