Revert "Decided styling for Page breakpoints"
This reverts commit d052381a7e220535e4ed5178d5e6e959051741e1.

--- a/packages/components/src/Page/Page.css
+++ b/packages/components/src/Page/Page.css
@@ -18,26 +18,22 @@
 
 .titleBar.large {
   display: flex;
-  flex-wrap: wrap;
-}
-
-.titleBar.large h1 {
-  flex: 1;
+  justify-content: space-between;
 }
 
 .actionGroup {
   margin-top: var(--space-base);
 }
 
-.titleBar .actionGroup {
+.titleBar.small .actionGroup {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .titleBar.large .actionGroup {
-  justify-content: flex-end;
-  flex: 1 0 auto;
+  justify-content: flex-start;
+  flex-shrink: 0;
   flex-wrap: nowrap;
   margin-top: 0;
 }
