--- a/packages/components/src/Table/Table.css
+++ b/packages/components/src/Table/Table.css
@@ -2,11 +2,26 @@
   --border-color: var(--color-grey--lighter);
   --header-border-color: var(--color-blue);
   --horizontal-inset: var(--space-base);
+  position: relative;
   width: 100%;
-
-  box-shadow: 0 0 0 var(--border-base) var(--border-color);
   border-collapse: collapse;
+}
+
+.table::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: calc(100% - 1px);
+  height: 100%;
+  border: solid 1px var(--border-color);
   border-radius: var(--radius-base);
+}
+
+.table * {
+  position: relative;
+  z-index: 2;
 }
 
 .row:not(:last-child) {
@@ -20,5 +35,5 @@
 }
 
 .footer .row {
-  border-top: solid 4px var(--border-color);
+  border-top: solid var(--space-smaller) var(--border-color);
 }
