--- a/packages/components/src/Table/Table.css
+++ b/packages/components/src/Table/Table.css
@@ -13,7 +13,7 @@
   top: 0;
   left: 0;
   z-index: 1;
-  width: calc(100% - 1px);
+  width: 100%;
   height: 100%;
   border: solid 1px var(--border-color);
   border-radius: var(--radius-base);
