--- a/packages/components/src/Table/Table.css
+++ b/packages/components/src/Table/Table.css
@@ -15,6 +15,7 @@
   z-index: 1;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
   border: solid var(--border-base) var(--border-color);
   border-radius: var(--radius-base);
 }
