--- a/packages/components/src/ProgressBar/ProgressBar.css
+++ b/packages/components/src/ProgressBar/ProgressBar.css
@@ -4,29 +4,30 @@
   --progress-bar--height: var(--space-base);
 }
 
-progress[value] {
+progress.ProgressBar[value] {
   width: 100%;
+  height: var(--progress-bar--height);
   border: none;
   appearance: none;
 }
 
-progress[value],
-progress[value]::-webkit-progress-bar {
+progress.ProgressBar[value],
+progress.ProgressBar[value]::-webkit-progress-bar {
   box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.05);
   border-radius: calc(var(--progress-bar--height) / 2);
 }
 
-progress[value]::-webkit-progress-bar {
+progress.ProgressBar[value]::-webkit-progress-bar {
   background-color: var(--progress-bar--backgroundColor);
 }
 
-progress[value]::-webkit-progress-value {
+progress.ProgressBar[value]::-webkit-progress-value {
   border-radius: calc(var(--progress-bar--height) / 2);
   background-color: var(--progress-bar--barColor);
   transition: all var(--timing-slow) ease-out;
 }
 
-progress[value]::-moz-progress-bar {
+progress.ProgressBar[value]::-moz-progress-bar {
   border-radius: calc(var(--progress-bar--height) / 2);
   background-color: var(--progress-bar--barColor);
   transition: all var(--timing-slow) ease-out;
