create shared disabled state for radio and checkbox labels

--- a/packages/components/src/RadioGroup/RadioGroup.css
+++ b/packages/components/src/RadioGroup/RadioGroup.css
@@ -38,7 +38,7 @@
 }
 
 .input[disabled] + .label {
-  color: var(--color-blue--lighter);
+  color: var(--color-disabled);
   cursor: not-allowed;
 }
 
