Match input signifier states, spice up checked radio

--- a/packages/components/src/Divider/Divider.css
+++ b/packages/components/src/Divider/Divider.css
@@ -1,5 +1,5 @@
 .divider {
-  height: var(--space-minuscule);
+  height: var(--space-miniscule);
   margin: 0;
   border: none;
   border-bottom: var(--border-base) solid var(--color-grey--lighter);
