--- a/packages/components/src/Table/Table.css
+++ b/packages/components/src/Table/Table.css
@@ -12,17 +12,12 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
   border: solid var(--border-base) var(--border-color);
   border-radius: var(--radius-base);
-}
-
-.table * {
-  position: relative;
-  z-index: 2;
+  pointer-events: none;
 }
 
 .row:not(:last-child) {
