--- a/packages/docx/src/ColorSwatches/ColorSwatch/ColorSwatch.css
+++ b/packages/docx/src/ColorSwatches/ColorSwatch/ColorSwatch.css
@@ -1,23 +1,27 @@
 .swatch {
   display: inline-block;
-  width: calc(100% / 4 - 0.5rem);
-  margin: 0.25rem;
+  width: 25%;
+  margin: var(--space-small) 0 var(--space-smaller);
+}
+
+.color[style*="background-color: rgb(255, 255, 255);"] {
+  box-shadow: var(--shadow-base);
 }
 
 .swatch:first-child {
-  width: calc(100% - 0.5rem);
+  width: 100%;
+  margin-top: var(--space-smaller);
 }
 
 .color {
-  height: 60px;
-  border: solid 1px var(--color-grey--light);
-  border-radius: 0.25rem;
+  height: var(--space-extravagant);
+  margin-bottom: var(--space-smaller);
 }
 
 .name,
 .value {
   width: 100%;
+  color: var(--color-greyBlue--dark);
   font-family: monospace;
-  font-size: 10px;
-  text-align: center;
+  font-size: var(--typography--fontSize-smaller);
 }
