Add learning colour variation

--- a/packages/design/src/colors.css
+++ b/packages/design/src/colors.css
@@ -5,6 +5,7 @@
   --color-invoice: var(--color-purple);
 
   --color-action: var(--color-green);
+  --color-action--learning: var(--color-lightBlue);
   --color-destructive: var(--color-red);
   --color-disabled: var(--color-grey);
   --color-disabled--secondary: var(--color-grey--lighter);
