--- a/packages/components/src/Toast/Toast.css
+++ b/packages/components/src/Toast/Toast.css
@@ -5,20 +5,25 @@
 
 .container {
   display: flex;
+  position: fixed;
+  right: 0;
+  bottom: var(--space-large);
+  left: 0;
+  z-index: var(--elevation-toast);
+  width: 100%;
+  box-sizing: border-box;
   flex-direction: column;
   align-items: center;
-  position: fixed;
-  bottom: var(--space-large);
-  left: 50%;
-  z-index: var(--elevation-toast);
+  padding: 0 var(--space-large);
   color: var(--color-greyBlue--dark);
   font-size: var(--typography--fontSize-large);
-  transform: translateX(-50%);
+  pointer-events: none;
 }
 
 .toast {
   box-shadow: var(--shadow-base);
   overflow: hidden;
+  pointer-events: all;
 }
 
 .toast + .toast {
