reset vertical-align property on progressbar

--- a/packages/components/src/ProgressBar/ProgressBar.css
+++ b/packages/components/src/ProgressBar/ProgressBar.css
@@ -8,6 +8,7 @@ progress.ProgressBar[value] {
   width: 100%;
   height: var(--progress-bar--height);
   border: none;
+  vertical-align: initial;
   appearance: none;
 }
 
