add shadow-focus variable to Atlantis

--- a/packages/components/src/Checkbox/Checkbox.css
+++ b/packages/components/src/Checkbox/Checkbox.css
@@ -60,7 +60,7 @@
 }
 
 .input:focus + .checkBox {
-  box-shadow: 0 0 4px 1px var(--color-outline);
+  box-shadow: var(--shadow-focus);
 }
 
 .disabled .input.indeterminate + .checkBox,
