--- a/packages/components/src/Banner/Banner.css
+++ b/packages/components/src/Banner/Banner.css
@@ -68,7 +68,7 @@
 }
 
 .closeButton:focus {
-  box-shadow: 0 0 1px 0.125rem var(--color-outline);
+  box-shadow: var(--shadow-focus);
   outline: none;
   background: rgba(0, 0, 0, 0.05);
 }
