--- a/packages/design/src/shadows.css
+++ b/packages/design/src/shadows.css
@@ -1,4 +1,5 @@
 :root {
   --shadow-base: 0px 1px 4px 0px rgba(0, 0, 0, 0.0980392),
     0px 4px 12px 0px rgba(0, 0, 0, 0.0470588);
+  --shadow-focus: 0px 0px 4px 2px var(--color-outline);
 }
