--- a/packages/docz-tools/src/gatsby-theme-docz/index.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/index.css
@@ -1,1 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700;900&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700;900&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap");
