--- a/packages/docz-tools/src/gatsby-theme-docz/index.css
+++ b/packages/docz-tools/src/gatsby-theme-docz/index.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700;900&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap");
 
 body {
-  font-family: "Source Sans Pro", sans-serif;
+  color: var(--color-greyBlue--dark);
+  font-family: var(--typography--fontFamily-normal);
+  font-size: var(--typography--fontSize-base);
+  line-height: var(--typography--lineHeight-large);
+  background-color: var(--color-grey--lightest);
 }
