feat(components): Add subtitle to Page component (#457)
* add subheader to page component

* update playground copy

* rename to use subtitle

* add margin bottom only on small screen

* only render subtitle div if there's content in it

* update Page description

* add description

* adjust margin depending on size

* update stage to ready

* simplify spacing

* remove large spacing, update snapshot

--- a/packages/components/src/Page/Page.css
+++ b/packages/components/src/Page/Page.css
@@ -78,3 +78,7 @@
 .titleBar.small .actionButton + .actionButton {
   margin-left: var(--space-small);
 }
+
+.titleBar .subtitle {
+  margin-bottom: var(--space-base);
+}
