--- a/packages/components/src/Spinner/Spinner.css
+++ b/packages/components/src/Spinner/Spinner.css
@@ -1,12 +1,11 @@
 .spinner {
   width: var(--space-larger);
   height: var(--space-larger);
-  box-shadow: var(--shadow-dark);
+  box-shadow: 0px 0px 4px 2px rgba(1, 41, 57, 0.4);
   border: solid var(--color-blue--light);
   border-top-color: var(--color-white);
   border-width: calc(var(--space-small) * 0.75);
-  border-radius: 50%;
-  vertical-align: middle;
+  border-radius: var(--radius-circle);
   background-color: var(--color-blue--lightest);
   animation-duration: 1s;
   animation-iteration-count: infinite;
@@ -25,20 +24,14 @@
   }
 }
 
-/* -------------------------------------------------------------------------
-   Small Spinner
-   ------------------------------------------------------------------------- */
-
 .small {
   width: var(--space-base);
   height: var(--space-base);
   border-width: var(--space-smaller);
 }
 
-/* -------------------------------------------------------------------------
-   Inline Spinner
-   ------------------------------------------------------------------------- */
-
 .inline {
   display: inline-block;
+  margin-top: calc(var(--space-smaller) * -1);
+  vertical-align: middle;
 }
