Update inline styling for FormField

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -99,7 +99,16 @@ select.formField {
 .inline {
   display: inline-block;
   width: auto;
-  vertical-align: -moz-middle-with-baseline;
+  vertical-align: baseline;
+}
+
+.inline > input,
+.inline > select {
+  display: inline-block;
+}
+
+.inline.inlineTextArea {
+  vertical-align: middle;
 }
 
 /* Sizes */
