--- a/packages/components/src/Popover/Popover.css
+++ b/packages/components/src/Popover/Popover.css
@@ -1,10 +1,19 @@
 :root {
   --card--background-color: var(--color-white);
   --card--base-padding: var(--space-base);
+  --popover--width: calc(var(--base-unit) * 37.5);
 }
 
-.tooltip {
-  max-width: 300px;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--modal--padding);
+}
+
+.popover {
+  width: 350px;
+  max-width: var(--popover--width);
   border: 1px solid rgb(203, 203, 203);
   border-radius: 2px;
   color: rgb(51, 51, 51);
@@ -14,17 +23,18 @@
   text-align: left;
   background: rgb(250, 250, 250);
   filter: drop-shadow(0px 0px 6px rgba(181, 181, 181, 0.4));
+  z-index:1;
 }
-.tooltip > .background {
+.popover > .background {
   height: 100px;
   background-image: url("https://images.pexels.com/photos/1563356/pexels-photo-1563356.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
 }
-.tooltip > p {
+.popover > p {
   margin: 0;
   padding: 8px;
 }
 
-.tooltip > * {
+.popover > * {
   --public-content--padding: var(--card--base-padding);
 }
 
@@ -49,27 +59,27 @@
   clip-path: polygon(-4px -4px, 15px 0, 0 15px);
 }
 
-.tooltip[data-popper-placement^="top"] > .arrow {
+.popover[data-popper-placement^="top"] > .arrow {
   bottom: -5px;
 }
-.tooltip[data-popper-placement^="top"] > .arrow::before {
+.popover[data-popper-placement^="top"] > .arrow::before {
   transform: rotate(-135deg);
 }
 
-.tooltip[data-popper-placement^="bottom"] > .arrow {
+.popover[data-popper-placement^="bottom"] > .arrow {
   top: -7px;
 }
 
-.tooltip[data-popper-placement^="left"] > .arrow {
+.popover[data-popper-placement^="left"] > .arrow {
   right: -5px;
 }
-.tooltip[data-popper-placement^="left"] > .arrow::before {
+.popover[data-popper-placement^="left"] > .arrow::before {
   transform: rotate(135deg);
 }
 
-.tooltip[data-popper-placement^="right"] > .arrow {
+.popover[data-popper-placement^="right"] > .arrow {
   left: -7px;
 }
-.tooltip[data-popper-placement^="right"] > .arrow::before {
-  transform: rotate(-135deg);
+.popover[data-popper-placement^="right"] > .arrow::before {
+  transform: rotate(-45deg);
 }
