--- a/packages/components/src/Popover/Popover.css
+++ b/packages/components/src/Popover/Popover.css
@@ -1,17 +1,28 @@
 :root {
   --card--background-color: var(--color-white);
   --card--base-padding: var(--space-base);
+  --popover--padding: var(--space-base);
   --popover--width: calc(var(--base-unit) * 37.5);
+  --dismiss--button-padding: calc(var(--base-unit) / 4);
 }
 
 .header {
   display: flex;
+  position: "relative";
+  padding: var(--popover--padding);
   justify-content: space-between;
   align-items: center;
-  padding: var(--modal--padding);
+}
+
+.dismissButton {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: var(--dismiss--button-padding);
 }
 
 .popover {
+  z-index: 1;
   width: 350px;
   max-width: var(--popover--width);
   border: 1px solid rgb(203, 203, 203);
@@ -23,7 +34,6 @@
   text-align: left;
   background: rgb(250, 250, 250);
   filter: drop-shadow(0px 0px 6px rgba(181, 181, 181, 0.4));
-  z-index:1;
 }
 .popover > .background {
   height: 100px;
