--- a/packages/components/src/Popover/Popover.css
+++ b/packages/components/src/Popover/Popover.css
@@ -25,7 +25,7 @@
   z-index: 1;
   width: 100%;
   max-width: var(--popover--width);
-  border: 1px solid var(--color-grey--light);
+  border: var(--border-base) solid var(--color-grey--light);
   border-radius: var(--radius-base);
   font-size: var(--base-unit);
   line-height: normal;
@@ -47,7 +47,7 @@
 .arrow::before {
   content: "";
   visibility: visible;
-  border: 1px solid var(--color-grey--light);
+  border: var(--border-base) solid var(--color-grey--light);
   transform: rotate(45deg);
   transform-origin: center;
   clip-path: polygon(-4px -4px, 15px 0, 0 15px);
