--- a/packages/components/src/List/List.css
+++ b/packages/components/src/List/List.css
@@ -5,7 +5,7 @@
 }
 
 .item:not(:last-child) {
-  border-bottom: var(--border-base) solid var(--color-grey--lighter);
+  border-bottom: var(--border-base) solid var(--color-border);
 }
 
 .section {
