--- a/packages/components/src/InputFile/InputFile.css
+++ b/packages/components/src/InputFile/InputFile.css
@@ -1,5 +1,5 @@
 :root {
-  --border-color: var(--color-blue--lightest);
+  --border-color: var(--color-border);
   --border-active-color: var(--color-outline);
 }
 
