Tweak some verbiage and order of the Popover docs
- use title-case when referencing component names
- add a11y notes
- add realted components
- flesh out design use cases

--- a/packages/components/src/Popover/Popover.css
+++ b/packages/components/src/Popover/Popover.css
@@ -25,7 +25,7 @@
   width: 100%;
   max-width: var(--popover--width);
   box-shadow: var(--shadow-base);
-  border: var(--border-base) solid var(--color-grey--light);
+  border: var(--border-base) solid var(--color-border);
   border-radius: var(--radius-base);
   font-size: var(--base-unit);
   line-height: normal;
