Applying a workaround to Safari's flex bug with `<summary>` tags
Apparently this is a known issue, bugs.webkit.org/show_bug.cgi?id=190065

--- a/packages/components/src/Disclosure/Disclosure.css
+++ b/packages/components/src/Disclosure/Disclosure.css
@@ -1,6 +1,7 @@
 .arrowIconWrapper {
   transform-origin: 50% 50% 0;
   transition: transform var(--timing-base);
+  flex-basis: 0;
 }
 
 .flippedVertical {
@@ -8,7 +9,6 @@
 }
 
 .summary {
-  display: flex;
   border: none;
   list-style: none;
   cursor: pointer;
@@ -32,12 +32,16 @@
   outline: none;
 }
 
-.summary h4 {
-  flex: 1;
-}
-
 .summary * {
   pointer-events: none;
+}
+
+.summaryWrap {
+  display: flex;
+}
+
+.summaryWrap h4 {
+  flex: 1 0 auto;
 }
 
 .content {
