--- a/packages/components/src/Disclosure/Disclosure.css
+++ b/packages/components/src/Disclosure/Disclosure.css
@@ -1,6 +1,6 @@
 .arrowIconWrapper {
   transform-origin: 50% 50% 0;
-  transition: transform var(--timing-base);
+  transition: transform var(--timing-quick);
   flex-basis: 0;
 }
 
@@ -56,10 +56,7 @@
 
 @keyframes openAnimation {
   0% {
-    margin-top: calc(var(--space-largest) * -1);
-    opacity: 0;
-  }
-  50% {
+    margin-top: calc(var(--space-small) * -1);
     opacity: 0;
   }
   100% {
