Add some keyboard interaction to catch edge cases
- add role of alert
- add tabindex to allow keyboards to catch error message if missed while editing

--- a/packages/components/src/InputValidation/InputValidation.css
+++ b/packages/components/src/InputValidation/InputValidation.css
@@ -12,3 +12,8 @@
 .message > svg {
   margin-right: var(--space-smaller);
 }
+
+.message:focus {
+  box-shadow: var(--shadow-focus);
+  outline: none;
+}
