add semantic colours to colors.css and update card

--- a/packages/components/src/Autocomplete/Autocomplete.css
+++ b/packages/components/src/Autocomplete/Autocomplete.css
@@ -57,7 +57,7 @@
 .option:focus,
 .option.active {
   background-color: var(--color-yellow--lightest);
-  outline-color: var(--color-outline);
+  outline-color: var(--color-focus);
 }
 
 .option.separator:not(:last-child) {
