--- a/packages/components/src/InputFile/InputFile.css
+++ b/packages/components/src/InputFile/InputFile.css
@@ -1,6 +1,6 @@
 :root {
   --border-color: var(--color-border);
-  --border-active-color: var(--color-outline);
+  --border-active-color: var(--color-focus);
 }
 
 .dropZoneBase {
