--- a/packages/components/src/Select/Select.css
+++ b/packages/components/src/Select/Select.css
@@ -76,7 +76,7 @@
 
 .select:focus {
   box-shadow: none;
-  border-color: var(--color-outline);
+  border-color: var(--color-focus);
   outline: none;
 }
 
