fix(components): use CSS only to determine whether to open arrow (#514)
* use CSS only to determine whether to open arrow

* tweak flip origin for optics

* tweak summary padding while we're here

--- a/packages/components/src/Disclosure/Disclosure.css
+++ b/packages/components/src/Disclosure/Disclosure.css
@@ -1,14 +1,15 @@
 .arrowIconWrapper {
-  transform-origin: 50% 50% 0;
+  transform-origin: 50% 47.5% 0;
   transition: transform var(--timing-quick);
   flex-basis: 0;
 }
 
-.flippedVertical {
+.details[open] .arrowIconWrapper {
   transform: rotateX(180deg);
 }
 
 .summary {
+  padding: var(--space-smaller) 0 var(--space-smallest) 0;
   border: none;
   list-style: none;
   cursor: pointer;
