fix typos and remove fluff from docs

--- a/packages/design/src/colors.css
+++ b/packages/design/src/colors.css
@@ -67,7 +67,7 @@
 
   --color-client: var(--color-teal);
 
-  /* Jobber Base Pallet */
+  /* Jobber Base Pallete */
   --color-blue: rgb(1, 41, 57);
   --color-blue--light: rgb(77, 105, 116);
   --color-blue--lighter: rgb(153, 169, 176);
